main.css
body {
    font-family: arial;
    font-size: 1.5em;
    margin-top: 20px;
    background-image: url("images/background.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    color: black;
}
a {
    text-decoration: none;
    color: black;
}
/*NAVIGATION START*/

.navBar {
    width: 50%;
    height: 30px;
    margin: 0 auto;
    border-top: 1px solid black;
    border-bottom: 1px solid black;
    padding-top: 5px;
}
.mainContainer {
    width: 290px;
    height: 30px;
    margin: 0 auto;
    padding: 0px;
}
.mainContainer li {
    float: left;
    margin-left: 10px;
    margin-right: 10px;
    text-align: center;
}
.subLinks3 {
    position: absolute;
    width: 100%;
    text-align: center;
    left: 0;
    padding: 0;
    margin: 0 auto;
    margin-top: 2px;
    border-top: 1px solid black;
    border-bottom: 1px solid black;
    background-color: rgba(0, 0, 0, 0.5);
    overflow: hidden;
    z-index: 101;
}
.subLinks3 a {
    color: white;
}
.subLinks3 li {
    float: left;
    text-align: center;
    width: 100%;
    margin: 5px;
    font-size: .7em;
    text-decoration: underline;
}
/*NAVIGATION END*/
/*BODY START*/

.newsLink {
    color: #1CEA83;
}
.newsLink:hover {
    color: #ADED18;
}
.newsImage {
    width: 80%;
}
.pageTitle {
    text-align: center;
    width: 100%;
    margin: 0 auto;
    padding: 0;
    z-index: 1;
    color: navy;
}
.mainContent {
    display: flex;
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
    margin-top: 40px;
    margin-bottom: 70px;
}
.introSection {
    width: 25%;
    height: auto;
    font-size: 18px;
    margin-top: 50px;
    margin-bottom: 50px;
    margin-left: 20px;
    margin-right: 20px;
    padding: 20px;
    background-color: rgba(0, 0, 0, 0.5);
    border: 2px solid black;
    border-radius: 5px;
    color: white;
    flex-grow: 1;
}
.mainIntro {
    width: 100%;
    font-size: 24px;
}
.innerSection {
    display: flex;
    width: 40%;
    flex-wrap: wrap;
}
.innerSection {
    background-color: none;
}
.aboutIntro {
    width: 100%;
    display: flex;
    flex-direction: row;
}
.innerAbout {
    width: 50%;
}
.aboutBody {
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}
.aboutBody h2 {
    width: 100%;
}
.crewImage {
    width: 40%;
    margin: 10;
    flex-grow: 1;
}
#slideshow {
    width: 30%;
    height: 600px;
    margin: 0 auto;
    position: absolute;
    top: 400px;
    left: 30px;
    background-color: rgba(0,0,0,0.5);
    background-color: rgba(0, 0, 0, 0.5);
    border: 2px solid #68E6E2;
    border-radius: 5px;
    color: white;
}
.slide {
    width: 75%;
    height: 400px;
    position: absolute;
    left: 80px;
    top: 100px;
    background-color: rgba(0, 0, 0, 0.5);
    border: 2px solid #68E6E2;
    border-radius: 5px;
    color: white;
}
.slide2 {
    width: 75%;
    position: absolute;
    left: 80px;
    top: 420px;
    background-color: skyblue;
    background-color: rgba(0, 0, 0, 1);
    border: 2px solid #68E6E2;
    border-radius: 5px;
    color: white;
}
.slide3 {
    width: 30%;
    position: absolute;
    left: 220px;
    top: 0px;
    background-color: skyblue;
    background-color: rgba(0, 0, 0, 1);
    border: 2px solid #68E6E2;
    border-radius: 5px;
    color: #1CEA83;
}
#ebola {
    position: relative;
    left: 150px;
    top: 20px;
}
#ebolanews {
    width: 465px;
    position: relative;
    left: 150px;
    top: 0px;
}
#women {
    position: absolute;
    left: 35px;
    top: 100px;
    background-color: rgba(0, 0, 0, 0.5);
    border: 2px solid #68E6E2;
    border-radius: 5px;
    color: white;
    width: 35%;
    height: 400px;
    }
#Crazy {
    position: absolute;
    top: 490px;
    left: 35px;
    background-color: rgba(0, 0, 0, 0.5);
    border: 2px solid #68E6E2;
    border-radius: 5px;
    color: white;
    width: 35%;
}

#Killer{
 position: absolute;
 left: 150px;
 color: #1CEA83;
}

#Pet{
 position: absolute;
 top: 400px;
 left: 1450;
 color: #1CEA83;
}
#Cat {
    background-color: rgba(0, 0, 0, 0.5);
    border: 2px solid #68E6E2;
    border-radius: 5px;
    color: white;
    position: absolute;
    top: 505px;
    left: 1230px;
    width: 30%;
    height: 400px;
}
#ZombieT {
    background-color: rgba(0, 0, 0, 0.5);
    border: 2px solid #68E6E2;
    border-radius: 5px;
    color: white;
    position: absolute;
    top: 895px;
    width: 35%;
    left: 1180px;
}
#pic2 {
    background-color: skyblue;
    background-color: rgba(0, 0, 0, 0.5);
    border: 2px solid #68E6E2;
    border-radius: 5px;
    color: white;
    position: absolute;
    left: 680px;
    top: 400px;
    height: 600px;
    width: 1200px;
}
#pic3 {
    background-color: skyblue;
    background-color: rgba(0, 0, 0, 1);
    border: 2px solid #68E6E2;
    border-radius: 5px;
    color: white;
}
/*BODY END*/

